# Proj

./: README.md  test.txt
algo/: CMakeLists.txt  README.md  build.sh  main.cpp
algo/inc/: bubblesort.hpp  insertion.hpp  main.hpp  mergesort.hpp  quicksort.hpp
calculator_java/: Calculator.java  calc.java
collision_simulation/: CMakeLists.txt  README.md  build.sh  main.cpp
collision_simulation/inc/: ball.hpp  main.hpp
file_organizer/: .gitignore  CMakeLists.txt  README.md  build.sh  categories.json  organizer.cpp
gravity/: CMakeLists.txt  README.md  build.sh  main.cpp
gravity/inc/: ball.hpp  main.hpp
mini_text_editor/: Makefile  README.md  main  main.cpp  main.hpp  test.txt
text-editor/: .gitignore  Makefile  main.cpp
text-editor/include/: editor.hpp  main.hpp
text-editor/src/: editor.cpp
todo_list/: Makefile  README.md  data.txt  todoapp
todo_list/inc/: todo.hpp
todo_list/src/: main.cpp  todo.cpp
